<resources>
    <string name="app_name">SWFGame</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="password_confirmText">Confirm Password</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="firstname_text">Firstname</string>
    <string name="lastname_text">Lastname</string>
    <string name="address_title">Address</string>
    <string name="birth_text">Day of birth</string>
    <string name="country_text">Country</string>
    <string name="city_text">City</string>
    <string name="streetname_text">Street name</string>
    <string name="zipcode_text">Zip code</string>
    <string name="housenumber_text">House number</string>
    <string name="complement_text">Complement (optional)</string>
    <string name="hascar_text">Have car</string>
    <string name="hasbike_text">Have bike</string>
    <string name="registerbutton_text">Register</string>
    <string name="title_text">Title</string>
    <string name="description_text">Description</string>
    <string name="gotit_text">Got it !</string>
    <string name="complete_text">Completed</string>
    <string name="event_localisation">Localisation</string>
    <string name="event_description">Description : </string>
    <string name="letsgo_text">Let\'s go !</string>
    <string name="dateStart_text">Date start</string>
    <string name="dateEnd_text">Date end</string>
    <string name="username">Username</string>
    <string name="level">Level 1 - Exp  </string>
    <string name="experience">Experience</string>
    <string name="back">Back</string>
    <string name="participate">Participate</string>
    <string name="completed_challenges">Completed challenges:</string>
    <string name="participated_events">Participated events:</string>

    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_home">Home</string>
    <string name="bottom_navigation_menu_challenges">Challenges</string>
    <string name="bottom_navigation_menu_events">Events</string>
    <string name="bottom_navigation_menu_advises">Advices</string>

    <string name="list_challenge_title">Challenges list:</string>
    <string name="list_event_title">Events list:</string>
    <string name="list_advice_title">Advices list:</string>
</resources>