<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/mainUser_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/logo_imageView"
            android:layout_width="match_parent"
            android:layout_height="226dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/swf_logo" />

        <EditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/email_text"
            android:inputType="textEmailAddress"
            android:padding="@dimen/input_padding" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:padding="@dimen/input_padding" />

        <Button
            android:id="@+id/login_button"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_edittext"
            android:fontFamily="@font/roboto_medium"
            android:padding="@dimen/input_padding"
            android:text="@string/login_text"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/register_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_inverse"
            android:fontFamily="@font/roboto"
            android:padding="@dimen/input_padding"
            android:text="@string/register_text"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>